Fix spacing issue with tabs

--- a/src/demo/demo-pages/DemoTextPage/DemoTextPage.css
+++ b/src/demo/demo-pages/DemoTextPage/DemoTextPage.css
@@ -152,12 +152,12 @@
 
 .tabs {
   display: flex;
-  position: relative;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 1vmin;
   margin-left: 5vmin;
+  padding: 3vmin 0 2vmin;
 }
 
 .tab-btn {
